--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-# chuyenV.github.io
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <h1>Hello world</h1>
-  </body>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Responsive Demo</title>
+<link rel="stylesheet" href=style.css">
+</head>
+<body>
+<div class="container">
+<header>
+<h1>T1</h1>
+<ul>
+<li>default = yellow</li>
+<li>1000px = bisque</li>
+<li>480px = red</li>
+<li>320px = green</li>
+</ul>
+</header>
+<hr>
+<section>
+<figure>
+<img src="t1.jpg" alt="t1">
+</figure>
+<p>T1 League of Legends Team </p>
+</section>
+<hr>
+<footer><p>Source:https://www.t1.gg/</p></footer>
+</div>
+</body>
 </html>
